--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "figlet": "^1.7.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
+    "js-beautify": "^1.14.11",
     "materialize-css": "^1.0.0-rc.2",
     "nunjucks": "^3.2.4",
     "path": "^0.12.7",
+    "pinia": "^2.1.7",
+    "recast": "^0.23.4",
+    "uuid": "^9.0.1",
     "vue": "^3.3.8",
     "yeoman-generator": "^3.1.1"
   }
